[workspace]
members = ["crates/rlox-analyzer", "crates/rlox-intermediate", "crates/rlox-runtime"]

[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
panic = "abort"

[dependencies]
rlox-analyzer = { path = "crates/rlox-analyzer" }
rlox-intermediate = { path = "crates/rlox-intermediate" }
rlox-runtime = { path = "crates/rlox-runtime" }